<resources>
    <string name="app_name">UploadGalleryApp</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_camera">Open Camera</string>
    <string name="dialog_gallery">Open Gallery</string>
    <string name="dialog_upload_title">Upload Image</string>
    <string name="dialog_upload_message">Select source.</string>
    <string name="camera_perm_error">Permission denied!</string>
    <string name="temp_image_prefix">temp-image</string>
    <string name="temp_image_suffix">.jpg</string>
    <string name="no_images">Oops. Nothing here!</string>
    <string name="no_net">Not connected!</string>
    <string name="refresh_text">Refresh</string>
    <string name="error_open_camera">Sorry! Unable to open camera</string>
    <string name="error_open_gallery">Sorry! Unable to open gallery</string>
    <string name="dialog_connect_error">Couldnot connect to database</string>
    <string name="dialog_connect_error_message">Sorry! Something went wrong</string>
    <string name="dialog_fetch_error_message">Sorry! Something went wrong\\nDownloading Images failed</string>
    <string name="dialog_upload_error_message">Sorry! Something went wrong\\nUploading Images failed</string>
</resources>
