...
                    android:layout_height="@dimen/manipulator_size"
                    android:src="@drawable/ic_rotate_right_black_24dp"
                    android:onClick="@{() -> editor.rotateLeft()}"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/editor_close"
                android:layout_width="@dimen/manipulator_size"
                android:layout_height="@dimen/manipulator_size"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:src="@drawable/ic_close_black_24dp"
                android:onClick="@{() -> editor.close()}"
                />

            <com.isseiaoki.simplecropview.CropImageView
                xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:id="@+id/editor_cropview"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/editor_save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
...
