<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gallery_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</layout>